--- a/app/src/main/res/layout/fragment_fitness_program.xml
+++ b/app/src/main/res/layout/fragment_fitness_program.xml
@@ -1,12 +1,9 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="edu.sc.myapplication.FitnessProgramFragment"
-
-    android:background="@drawable/background2">
+    android:layout_height="match_parent"
+    android:id="@+id/containerFitnessP"
+    android:background="@drawable/background2"
+    >
 
     <TextView
         android:layout_width="wrap_content"
@@ -25,7 +22,8 @@
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="94dp"
-        android:background="#ff3c39" />
+        android:background="#ff3c39"
+        android:clickable="true" />
 
     <Button
         android:layout_width="wrap_content"
@@ -35,7 +33,8 @@
         android:layout_centerVertical="true"
         android:layout_alignStart="@+id/StrengthTrainingButton"
         android:layout_alignEnd="@+id/StrengthTrainingButton"
-        android:background="#2c6bff" />
+        android:background="#2c6bff"
+        android:clickable="true" />
 
     <Button
         android:layout_width="wrap_content"
@@ -46,7 +45,8 @@
         android:layout_below="@+id/BodyBuildingButton"
         android:layout_alignStart="@+id/BodyBuildingButton"
         android:layout_alignEnd="@+id/StrengthTrainingButton"
-        android:background="#8bff14" />
+        android:background="#8bff14"
+        android:clickable="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -92,4 +92,4 @@
 
 
 
-</RelativeLayout>
+</FrameLayout>
