--- a/app/src/main/res/layout/fragment_fp__wgt__loss.xml
+++ b/app/src/main/res/layout/fragment_fp__wgt__loss.xml
@@ -58,5 +58,11 @@
         android:id="@+id/day2WeightLoss"
         android:layout_marginBottom="75dp"
         android:layout_gravity="center" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="BACK"
+        android:id="@+id/backButtonWeightLoss"
+        android:layout_gravity="center_horizontal|bottom" />
 
 </FrameLayout>
