--- a/app/src/main/res/layout/fragment_profile__page.xml
+++ b/app/src/main/res/layout/fragment_profile__page.xml
@@ -29,4 +29,17 @@
         android:text="BMI"
         android:id="@+id/button7"
         android:layout_gravity="center_horizontal|bottom" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:ems="10"
+        android:id="@+id/editText"
+        android:layout_marginBottom="100dp"
+        android:layout_gravity="left|center_vertical"
+        android:textColor="#362cff"
+        android:background="#f1fff0"
+        android:hint="Name" />
 </FrameLayout>
