--- a/app/src/main/res/layout/fragment_fitness_program.xml
+++ b/app/src/main/res/layout/fragment_fitness_program.xml
@@ -12,10 +12,11 @@
         android:text="Choose your Fitness Program:"
         android:id="@+id/textView"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textColor="#ffffff" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Strength Training"
         android:id="@+id/StrengthTrainingButton"
@@ -26,25 +27,26 @@
         android:clickable="true" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="BodyBuilding"
         android:id="@+id/BodyBuildingButton"
         android:layout_centerVertical="true"
         android:layout_alignStart="@+id/StrengthTrainingButton"
         android:layout_alignEnd="@+id/StrengthTrainingButton"
+        android:layout_marginTop="200dp"
         android:background="#2c6bff"
         android:clickable="true" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Weight Loss"
         android:id="@+id/WeightLossButton"
-        android:layout_marginTop="47dp"
         android:layout_below="@+id/BodyBuildingButton"
         android:layout_alignStart="@+id/BodyBuildingButton"
         android:layout_alignEnd="@+id/StrengthTrainingButton"
+        android:layout_marginTop="100dp"
         android:background="#8bff14"
         android:clickable="true" />
 
@@ -55,6 +57,7 @@
         android:text="Get stronger with FitLivin!"
         android:id="@+id/textView6"
         android:layout_below="@+id/StrengthTrainingButton"
+        android:layout_marginTop="350dp"
         android:layout_alignEnd="@+id/textView"
         android:textColor="@android:color/white" />
 
@@ -66,6 +69,7 @@
         android:id="@+id/textView7"
         android:layout_below="@+id/BodyBuildingButton"
         android:layout_alignStart="@+id/textView6"
+        android:layout_marginTop="250dp"
         android:textColor="@android:color/white" />
 
     <TextView
@@ -75,6 +79,7 @@
         android:text="Lose weight and get in better shape!"
         android:id="@+id/textView8"
         android:layout_below="@+id/WeightLossButton"
+        android:layout_marginTop="150dp"
         android:layout_alignStart="@+id/textView7"
         android:textColor="@android:color/white" />
 
@@ -82,10 +87,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Based on your Individual Goals"
+        android:text="Based on YOUR Individual Goals"
         android:id="@+id/textView9"
         android:layout_below="@+id/textView"
-        android:layout_alignEnd="@+id/textView" />
+        android:layout_marginTop="25dp"
+        android:layout_alignEnd="@+id/textView"
+        android:textColor="#ffffff" />
 
 
 
