--- a/app/src/main/res/layout/fragment_fp__str__training.xml
+++ b/app/src/main/res/layout/fragment_fp__str__training.xml
@@ -4,15 +4,6 @@
     android:id="@+id/containerFitnessP"
     android:background="@drawable/background2"
     >
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text=" Strength Program "
-        android:id="@+id/textView12"
-        android:background="@android:color/white"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="match_parent"
@@ -75,4 +66,15 @@
         android:text="BACK"
         android:id="@+id/backButtonStrength"
         android:layout_gravity="center_horizontal|bottom" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text=" Strength Program "
+        android:id="@+id/textView12"
+        android:background="@android:color/white"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal|top" />
 </FrameLayout>
